--- a/action.yml
+++ b/action.yml
@@ -11,10 +11,10 @@ runs:
         node-version: '16'
     - name: Install dependencies
       run: npm install
+      shell: sh
     - name: This is issues test
       run: node $GITHUB_ACTION_PATH/app.js
       shell: sh
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ISSUE_NUMBER: ${{ github.event.number }}
         GITHUB_ACTION_PATH: ${{ github.action_path }}
