--- a/action.yml
+++ b/action.yml
@@ -16,5 +16,5 @@ runs:
       run: node $GITHUB_ACTION_PATH/app.js
       shell: sh
       env:
-        ISSUE_NUMBER: ${{ github.event.number }}
+        ISSUE_NUMBER: ${{ github.event.issue.number }}
         GITHUB_ACTION_PATH: ${{ github.action_path }}
