--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -12,11 +12,21 @@ jobs:
         env:
           TZ: "Asia/Tokyo"
         id: date
-        run: echo "::set-output name=year::$(date +'%Y')"
-        run: echo "::set-output name=month::$(date +'%m')"
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: year
+        env:
+          TZ: "Asia/Tokyo"
+        id: year
+        run: echo "::set-output name=year::$(date +'%Y')"
+
+      - name: month
+        env:
+          TZ: "Asia/Tokyo"
+        id: month
+        run: echo "::set-output name=month::$(date +'%m')"
 
       - name: This is issues test
         uses: secondnoraworld/github-actions-issues-sample@main
         with:
-          filepath: _posts/${{ steps.date.outputs.year }}/${{ steps.date.outputs.month }}/${{ steps.date.outputs.date }}-.md
+          filepath: _posts/${{ steps.year.outputs.year }}/${{ steps.month.outputs.month }}/${{ steps.date.outputs.date }}-.md
