--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -20,3 +20,4 @@ jobs:
           filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
+          extra_text_when_modified: "# issue からこんにちはです"
