--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,18 @@ inputs:
     description: When the file already exists, this string will be added before the content
     required: false
     default: "# From issues"
+  with_date:
+    description: Whether to include the date and time
+    required: false
+    default: false
+  timezone:
+    description: Your timezone
+    required: false
+    default: Etc/GMT
+  time_format:
+    description: Time format
+    required: false
+    default: yyyy-MM-dd HH:mm:ss
 
 runs:
   using: "composite"
@@ -41,3 +53,6 @@ runs:
         COMMITTER_NAME: ${{ inputs.committer_name }}
         COMMITTER_EMAIL: ${{ inputs.committer_email }}
         EXTRA_TEXT_WHEN_MODIFIED: ${{ inputs.extra_text_when_modified }}
+        WITH_DATE: ${{ inputs.with_date }}
+        TIMEZONE: ${{ inputs.timezone }}
+        TIME_FORMAT: ${{ inputs.time_format }}
