--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -1,8 +1,9 @@
 name: schedule_test
 
 on:
-  schedule:
-    - cron:  '0 20 * * *'
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -14,3 +15,5 @@ jobs:
           gh issue create --title "$(date '+%Y-%m-%d' --date '1 day')"
           gh issue list | grep $(date '+%Y-%m-%d') | awk '{ print $1 }' | xargs -I {} gh issue close {}
         shell: sh
+        env:
+          GH_TOKEN: ${{ github.token }}
