Check out repository

--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+
       - name: cron test
         # Note that the timezone is UTC.
         run: |
