--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -15,6 +15,9 @@ jobs:
       - name: cron test
         # Note that the timezone is UTC.
         run: |
+          echo debug
+          date '+%Y-%m-%d'
+          date '+%Y-%m-%d' --date '1 day'
           gh issue create --title "$(date '+%Y-%m-%d' --date '1 day')" --body ""
           gh issue list | grep $(date '+%Y-%m-%d') | awk '{ print $1 }' | xargs -I {} gh issue close {}
         shell: sh
