--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -22,4 +22,4 @@ jobs:
           gh issue list | grep $(date '+%Y-%m-%d') | awk '{ print $1 }' | xargs -I {} gh issue close {}
         shell: sh
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
