--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -15,7 +15,7 @@ jobs:
         run: echo "MONTH=$(cut -d '-' -f2 <<< ${{ github.event.issue.title }})" >> $GITHUB_ENV
 
       - name: This is issues test
-        uses: secondnoraworld/github-actions-issues-sample@main
+        uses: noraworld/issue-tracker@main
         with:
           filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
           committer_name: Kosuke Aoki
