--- a/action.yml
+++ b/action.yml
@@ -46,9 +46,9 @@ runs:
       uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Install dependencies
-      run: npm install
-      shell: sh
+    # - name: Install dependencies
+    #   run: npm install
+    #   shell: sh
     - name: This is issues test
       run: node $GITHUB_ACTION_PATH/app.js
       shell: sh
