--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -24,4 +24,4 @@ jobs:
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-          with_header: "---\r\n---"
+          # with_header: "---\r\n---"
