--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -13,12 +13,11 @@ jobs:
       - name: cron test
         # Note that the timezone is UTC.
         run: |
-          gh issue create --title "test" --body "
-            # チェックリスト
-            * [ ] hello world
-            * [ ] foo bar
-            * [ ] hello again
-          "
+          gh issue create --title "test2" --body "
+          # チェックリスト
+          * [ ] hello world
+          * [ ] foo bar
+          * [ ] hello again"
           # gh issue create --title "$(date '+%Y-%m-%d' --date '1 day')" --body ""
           # gh issue list --search $(date '+%Y-%m-%d') | awk '{ print $1 }' | xargs -I {} gh issue close {}
         shell: sh
