--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -13,9 +13,7 @@ jobs:
       - name: cron test
         # Note that the timezone is UTC.
         run: |
-          gh issue create --title "test9" --body-file ".github/ISSUE_TEMPLATE.md"
-          # gh issue create --title "$(date '+%Y-%m-%d' --date '1 day')" --body ""
-          # gh issue list --search $(date '+%Y-%m-%d') | awk '{ print $1 }' | xargs -I {} gh issue close {}
+          gh issue create --title "foo with to-do" --body "$(cat GH_ISSUE_TEMPLATES.md)$(gh issue list --repo noraworld/to-do --label purchase --json title,url --template '{{"\r\n"}}{{range.}}* [ ] [{{.title}}]({{.url}}){{"\r\n"}}{{end}}')"
         shell: sh
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
