--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -13,7 +13,13 @@ jobs:
       - name: cron test
         # Note that the timezone is UTC.
         run: |
-          gh issue create --title "foo with to-do" --body "$(cat GH_ISSUE_TEMPLATES.md)$(gh issue list --repo noraworld/to-do --label purchase --json title,url --template '{{"\r\n"}}{{range.}}* [ ] [{{.title}}]({{.url}}){{"\r\n"}}{{end}}')"
+          FOO=$(cat GH_ISSUE_TEMPLATES.md)
+          BAR=$(gh issue list \
+          --repo noraworld/to-do \
+          --label purchase \
+          --json title,url \
+          --template '{{"\r\n"}}{{range.}}* [ ] [{{.title}}]({{.url}}){{"\r\n"}}{{end}}')
+          gh issue create --title "foo with to-do with newline" --body "$FOO$BAR"
         shell: sh
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
