--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -13,13 +13,14 @@ jobs:
       - name: cron test
         # Note that the timezone is UTC.
         run: |
-          FOO=$(cat GH_ISSUE_TEMPLATES.md)
-          BAR=$(gh issue list \
+          TEMPLATE=$(cat GH_ISSUE_TEMPLATES.md)
+          TO_DO=$(gh issue list \
           --repo noraworld/to-do \
           --label purchase \
           --json title,url \
           --template '{{"\r\n"}}{{range.}}* [ ] [{{.title}}]({{.url}}){{"\r\n"}}{{end}}')
-          gh issue create --title "foo with to-do with newline" --body "$FOO$BAR"
+
+          gh issue create --title "TO_DO VARIABLE" --body "$TEMPLATE$TO_DO"
         shell: sh
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
