--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           NUMBER=$(gh issue list --repo "noraworld/diary" --limit 1 | awk '{ print $1 }')
           BODY=$(gh issue view --repo "noraworld/diary" --json body --jq .body "$NUMBER")
-          echo "* [ ] [${{ github.event.issue.title }}](${{ github.event.issue.url }})" > tmp.txt
+          echo "* [ ] [${{ github.event.issue.title }}](${{ github.event.issue.url }})\r\n" > tmp.txt
           export NEW=$(cat tmp.txt)
           gh issue edit --repo "noraworld/diary" --body "$BODY$NEW" "$NUMBER"
         shell: sh
