--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -18,6 +18,8 @@ jobs:
       - name: This is a test for Issue Recorder
         uses: noraworld/github-actions-sandbox@main
         with:
+          mode: "file, issue"
+          target_issue_number: 72
           filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
