--- a/action.yml
+++ b/action.yml
@@ -72,6 +72,7 @@ runs:
       run: node $GITHUB_ACTION_PATH/app.js
       shell: sh
       env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
         GITHUB_TOKEN: ${{ github.token }}
         ISSUE_NUMBER: ${{ github.event.issue.number }}
         ISSUE_TITLE: ${{ github.event.issue.title }}
