--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -28,3 +28,5 @@ jobs:
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           # with_header: "---\r\n---"
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
