--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -23,7 +23,7 @@ jobs:
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           extra_text_when_modified: "# issue からこんにちはです"
-          # with_date: true
+          with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           # with_header: "---\r\n---"
