--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -27,6 +27,6 @@ jobs:
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           # with_header: "---\r\n---"
-          # with_quote: true
+          with_quote: true
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
