--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -26,7 +26,7 @@ jobs:
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-          # with_header: "---\r\n---"
+          with_header: "---\r\n---"
           with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
