--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -23,8 +23,8 @@ jobs:
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           extra_text_when_modified: "# issue からこんにちはです"
-          target_issue_repo: noraworld/diary
-          target_issue_number: latest
+          # target_issue_repo: noraworld/diary
+          # target_issue_number: latest
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
