--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -19,7 +19,8 @@ jobs:
         uses: noraworld/issue-recorder@main
         with:
           mode: "issue, file"
-          filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
+          # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
+          filepath: issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           extra_text_when_modified: "# issue からこんにちはです"
