--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           mode: "issue, file"
           # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
-          filepath: issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md
+          filepath: "issues/${{ github.event.issue.number }}_$TITLE.md"
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           extra_text_when_modified: "# issue からこんにちはです"
@@ -33,3 +33,4 @@ jobs:
           with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          TITLE: ${{ github.event.issue.title }}
