--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -29,7 +29,8 @@ jobs:
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-          with_header: title
+          # with_header: title
+          with_title: true
           with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
