--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -30,7 +30,7 @@ jobs:
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           # with_header: title
-          # with_title: true
+          with_title: true
           with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
