--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -24,10 +24,11 @@ jobs:
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           extra_text_when_modified: "# issue からこんにちはです"
+          notification_comment: このタスクの内容は [`<FILE_PATH>`](<FILE_URL>) に保存されました。
           # target_issue_repo: noraworld/diary
           # target_issue_number: latest
-          fold_threshold: 1000
-          # fold_summary: ここをクリックすると展開できます
+          fold_threshold: 100
+          fold_summary: ここをクリックすると展開できます
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
