--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -37,3 +37,17 @@ jobs:
           with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Pile up today's to-do list on diary's issue
+        run: |
+          NUMBER=$(gh issue list --repo "noraworld/diary" --limit 1 | awk '{ print $1 }')
+          BODY=$(gh issue view --repo "noraworld/diary" --json body --jq .body "$NUMBER")
+
+          gh issue edit --repo "noraworld/diary" --body "$BODY
+          * [x] [$TITLE]($URL)
+          " "$NUMBER"
+        shell: sh
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          TITLE: ${{ github.event.issue.title }}
+          URL: ${{ github.event.issue.html_url }}
