--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -43,6 +43,9 @@ jobs:
           NUMBER=$(gh issue list --repo "noraworld/diary" --limit 1 | awk '{ print $1 }')
           BODY=$(gh issue view --repo "noraworld/diary" --json body --jq .body "$NUMBER")
 
+          echo "$BODY"
+          echo "[$TITLE]($URL)"
+
           if [ "$(echo "$BODY" | grep -c "[$TITLE]($URL)")" -eq 0 ]; then
             gh issue edit --repo "noraworld/diary" --body "$BODY
             * [x] [$TITLE]($URL)
