--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -17,6 +17,7 @@ jobs:
           # filepath: "issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md"
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
+          overwrite_when_modified: true
           extra_text_when_modified: "# issue からこんにちはです"
           notification_comment: このタスクの内容は [`<FILE_PATH>`](<FILE_URL>) に保存されました。
           # target_issue_repo: noraworld/diary
