--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.1",
     "@octokit/rest": "^19.0.13",
+    "js-base64": "^3.7.7",
     "luxon": "^3.3.0"
   }
 }
